    - Added reinforced substation with 1000 HP.
    - Reinforced inserters and power poles, substations are now military targets.
    - Attack point consumption change, air unit group 75 -> 50, dropship group 150 -> 100.
    - Base game Energy-Shield and SE adaptive armour, SE medpack now multiply with FreeForAll multiplier.


---------------------------------------------------------------------------------------------------
Version: 1.15.5
Date: 2022-09-02

  Bugfixes:
    - Yet another attempt to fix high level units escaping the level processor in early game.
    - Added an early game high level unit elimination function.

---------------------------------------------------------------------------------------------------
Version: 1.15.4
Date: 2022-08-20

  Bugfixes:
    - Fix level slider bug where when you are one level under max_level. The slide uses 0.05 interval. (Github Issue 23)

---------------------------------------------------------------------------------------------------
Version: 1.15.3
Date: 2022-07-10

  Changes:
    - Buffed HP on reinforced belt from 510 to 680
    - Buffed HP on reinforced inserter from 480 to 600
    - Buffed HP on reinforced pipe from 500 to 600
    - Buffed HP on reinforced underground pipe from 600 to 750
    - Buffed HP on reinforced underground belt from 600 to 750
    - Changed setting description for 1.1.61 Setting UI Changes.
    - Level processor check interval can now be changed in startup setting. Default: 60 minutes, Options: 5, 15, 30, 60
    - Improve unit performance by changing enemies distraction_cooldown from 20 to 300.

  Bugfixes:
    - Fixed The enemy level requirement multiplier is not taken into account when manually setting a race's level. (Github Issue 22)

---------------------------------------------------------------------------------------------------
Version: 1.15.2
Date: 2022-06-22

  Changes:
    - Reinforced wall now take 10 wall to produce 10 reinforced wall. Upped from 4.