@@ -152,7 +152,7 @@ end
 function BaseBuildProcessor.build(surface, name, force_name, position, radius)
     radius = radius or 64
     if not surface.can_place_entity({ name = name, force = force_name, position = position }) then
-        position = surface.find_non_colliding_position(name, position, radius, 9.5, true)
+        position = surface.find_non_colliding_position(name, position, radius, 11.33, true)
     end
 
     if position then
