@@ -37,7 +37,7 @@ local spawnRadius = 64
 local cleanChunkSize = 8
 local maxRetry = 3
 
-local INCLUDE_SPAWNS = false -- Only for debug
+local INCLUDE_SPAWNS = true -- Only for debug
 
 local enemy_entities = {'unit-spawner','turret','unit'}
 local enemy_buildings = {'unit-spawner','turret'}
@@ -196,9 +196,9 @@ local spawn_building = function()
     local boss_tier = boss.boss_tier
     for i = 1, ErmConfig.BOSS_SPAWN_SUPPORT_STRUCTURES[boss_tier] do
         local building_name
-        if ErmRaceSettingsHelper.can_spawn(10) then
+        if ErmRaceSettingsHelper.can_spawn(7) then
             building_name = ErmBaseBuildProcessor.getBuildingName(boss.race_name, 'cc')
-        elseif ErmRaceSettingsHelper.can_spawn(50) then
+        elseif ErmRaceSettingsHelper.can_spawn(45) then
             building_name = ErmBaseBuildProcessor.getBuildingName(boss.race_name, 'support')
         else
             building_name = ErmBaseBuildProcessor.getBuildingName(boss.race_name, 'turret')
